Fix 'found' video positioning on all devices. More space for hints on smaller devices.

--- a/sass/sensing_evolution.scss
+++ b/sass/sensing_evolution.scss
@@ -320,10 +320,17 @@ h3 {
       text-align: center;
       left: 60%;
       width:40%;
+      @media #{$phone_small} {
+        left: 55%;
+        width: 45%;
+      }
       height: 100%;
       background-color: $overlayWhite;
       img.item-map {
         width: 70%;
+        @media #{$phone_small} {
+          width: 60%;
+        }
         height: auto;
         margin: 0 auto;
       }
@@ -342,7 +349,9 @@ h3 {
       .hint {
         display: none;
         @media #{$phone_small} {
-          margin-top: 5px;
+          margin-top: 0px;
+          margin-left: 3%;
+          margin-right: 3%;
         }
         &.revealed {
           //Add the 'revealed' class once revealed, and the hint will be shown
@@ -357,9 +366,8 @@ h3 {
   .found-video {
     width:100%;
     height:100%;
-    position: absolute;
+    position: fixed;
     @media #{$phone} {
-      position: fixed;
       top: 0px;
     }
     background-color: $overlayWhite;
@@ -533,6 +541,9 @@ h3 {
 .item-unlock {
   text-align: right;
   margin: 10px 0px 10px 10px;
+  @media #{$phone_small} {
+    margin-bottom: 5px;
+  }
   height: 40px;
   @media #{$tablet} {
     height: 60px;
